<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".alumno.MenuAlumno"
    android:background="@drawable/fondomovil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_drag_and_drop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_drag_and_drop"
            android:textColor="#FFFFFF"
            android:background="#2184FF"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/button_fill_the_gaps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_fill_the_gaps"
            android:textColor="#FFFFFF"
            android:background="#2184FF"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/button_consultar_puntos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_consultar_puntos"
            android:textColor="#FFFFFF"
            android:background="#2184FF" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
