<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/asignar_grupo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondomovil"
    tools:context="profesor.AsignarAlumnoAGrupo">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_alumno"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:textColor="#FFFFFF" />

        <Spinner
            android:id="@+id/spinner_alumno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#A8C4FF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_grupo"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:textColor="#FFFFFF" />

        <Spinner
            android:id="@+id/spinner_grupo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#A8C4FF" />

        <Button
            android:id="@+id/button_asociar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_asociar"
            android:textColor="#FFFFFF"
            android:background="#2184FF" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
